--- a/index.html
+++ b/index.html
@@ -148,15 +148,8 @@
   <div class="bearplane-card-content">
     <img src="800x480-main.gif" alt="Bearplane Preview" class="bearplane-image">
     <div class="bearplane-text">
-      <h2>🎩 Bearplane Will be Taking Off Soon!</h2>
-      <p><strong>A rocket-powered bear. A sky full of bad guys.</strong><br>
-      The wildest flight of the century is coming soon on Steam, iOS, and Android.</p>
+      <h2>The Wildest Flight of the Century Taking Off Soon!</h2>
       <p>After decades of innovation in nuclear-infused food and radioactive nectar beverages, Atomic Mills is proud to bring its atomic genius to the world of video games. To celebrate our explosive legacy, we’ve created <em>Bearplane</em>—a high-flying tribute to everything we stand for: chaos, courage, and questionable safety standards.</p>
-      <div class="bearplane-tags">
-        <span>🕹 Steam</span>
-        <span>📱 iOS</span>
-        <span>📱 Android</span>
-      </div>
     </div>
   </div>
 </a>
