--- a/bearplane.html
+++ b/bearplane.html
@@ -260,6 +260,10 @@
       <em><strong>Take to the skies as a rocket-powered bear in Bearplane: a whimsical, action-packed adventure loosely inspired by the legendary tale of Wojtek the Bear. Battle dastardly foes with outrageous abilities, nuclear-fused snacks, and a whole lot of midair mayhem.</strong></em>
     </p>
 
+    <p id="coming-soon-text" style="text-align: center; font-weight: bold; font-size: 1.3em; color: darkred; margin-bottom: 5px;">
+      Coming Soon to:
+    </p>
+
     <div class="store-buttons">
       <a href="https://steamcommunity.com/app/3370980" target="_blank">
         <img src="steam-badge.png" alt="Steam" />
