--- a/bearplane.html
+++ b/bearplane.html
@@ -402,6 +402,15 @@
     <h3>Where can I ask questions or submit feedback?</h3>
     <p>We’d love to hear from you! Email us at <a href="mailto:AtomicMills@aol.com">AtomicMills@aol.com</a> or join the conversation on <a href="https://discord.gg/HK3xWJTdjc" target="_blank">Discord</a>. Whether it’s ideas, bugs, or just bear puns—we’re all ears.</p>
   </div>
+
+  <div class="faq-item">
+    <h3>Matt, can I buy you coffee?</h3>
+    <p>Why yes, you can! If <em>Bearplane</em> made you laugh, smile, or roar in public, feel free to fuel my next coding session with some caffeine:<br>
+    <a href="https://www.buymeacoffee.com/mattburton" target="_blank">https://www.buymeacoffee.com/mattburton</a></p>
+    <p>(And thank you, you rock!)</p>
+    <img src="https://atomicmills.com/bmc-qr.png" alt="Buy Me a Coffee QR Code" style="width: 100px; height: 100px; margin-top: 10px;">
+  </div>
+
 </div>
 
   <div class="social-links">
