--- a/bearplane.html
+++ b/bearplane.html
@@ -408,7 +408,7 @@
     <p>Why yes, you can! If <em>Bearplane</em> made you laugh, smile, or roar in public, feel free to fuel my next coding session with some caffeine:<br>
     <a href="https://www.buymeacoffee.com/mattburton" target="_blank">https://www.buymeacoffee.com/mattburton</a></p>
     <p>(And thank you, you rock!)</p>
-    <img src="https://atomicmills.com/bmc-qr.png" alt="Buy Me a Coffee QR Code" style="width: 100px; height: 100px; margin-top: 10px;">
+    <img src="https://atomicmills.com/bmc_qr.png" alt="Buy Me a Coffee QR Code" style="width: 100px; height: 100px; margin-top: 10px;">
   </div>
 
 </div>
