--- a/bearplane.html
+++ b/bearplane.html
@@ -406,7 +406,7 @@
   <div class="faq-item">
     <h3>Matt, can I buy you coffee?</h3>
     <p>Why yes, you can! If <em>Bearplane</em> made you laugh, smile, or roar in public, feel free to fuel my next coding session with some caffeine:<br>
-    <a href="https://www.buymeacoffee.com/mattburton" target="_blank">https://www.buymeacoffee.com/mattburton</a></p>
+    <a href="https://buymeacoffee.com/burtbot" target="_blank">https://buymeacoffee.com/burtbot</a></p>
     <p>(And thank you, you rock!)</p>
     <img src="https://atomicmills.com/bmc_qr.png" alt="Buy Me a Coffee QR Code" style="width: 100px; height: 100px; margin-top: 10px;">
   </div>
