--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <div class="bearplane-card-content">
     <img src="800x480-main.gif" alt="Bearplane Preview" class="bearplane-image">
     <div class="bearplane-text">
-      <h2>The Wildest Flight of the Century Taking Off Soon!</h2>
+      <h2>The Wildest Flight of the Century is Taking Off Soon!</h2>
       <p>After decades of innovation in nuclear-infused food and radioactive nectar beverages, Atomic Mills is proud to bring its atomic genius to the world of video games. To celebrate our explosive legacy, we’ve created <em>Bearplane</em>—a high-flying tribute to everything we stand for: chaos, courage, and questionable safety standards.</p>
     </div>
   </div>
