--- a/bearplane.html
+++ b/bearplane.html
@@ -314,7 +314,7 @@
     <p><em>Bearplane</em> took flight in 2020 during lockdown. With travel and work suddenly off the table, I found myself deep in the weird corners of history, where I discovered the incredible story of Wojtek. It was bizarre, funny, and strangely heroic… I HAD to make a game about it.</p>
     <p>I was inspired by the tonal contrast in <em>Fallout</em>—brutal combat wrapped in cheerful 1940s vibes. I wanted <em>Bearplane</em> to feel like that too. I also borrowed from <em>Skyrim’s</em> shout mechanic and the physical comedy of the cartoon <em>Tom and Jerry</em>, where the audio always perfectly matches the slapstick mayhem.</p>
     <p>For two years, I focused entirely on getting the movement and core mechanic to feel just right.</p>
-    <p>By 2023, I brought on incredible artists Leo Siebert, Jordan Wadell, and Vinnie Peters, who helped bring <em>Bearplane</em> to life visually. I also worked with composer Sean Smith, who created the game’s big-band score and recorded it with a real jazz band to capture the spirit of the era.</p>
+    <p>By 2023, I teamed up with composer Sean Smith, who created the game’s big-band score and recorded it with a real jazz band to capture the spirit of the era. I also brought on incredible artists Leo Siebert, Jordan Wadell, and Vinnie Peters, who helped bring <em>Bearplane</em> to life visually. I couldn’t be happier with how well the team worked together—everyone brought their unique strengths and creative energy, and the final result surpassed all expectations. It was truly a dream collaboration.</p>
     <p>Since then, over 7,000 hours (and cups of coffee) have gone into turning this very reasonable idea of a bear with a jetpack into a fully playable game.</p>
   </div>
 
