--- a/bearplane.html
+++ b/bearplane.html
@@ -265,7 +265,7 @@
     </p>
 
     <div class="store-buttons">
-      <a href="https://steamcommunity.com/app/3370980" target="_blank">
+      <a href="https://store.steampowered.com/app/3370980" target="_blank">
         <img src="steam-badge.png" alt="Steam" />
       </a>
       <a href="https://apps.apple.com/app/id6456222792" target="_blank">
