--- a/bearplane.html
+++ b/bearplane.html
@@ -279,7 +279,7 @@
   
   <div class="section">
     <h2>Ram! Roast! Roar! Victory awaits!</h2>
-    <img src="800px-combat.gif" alt="Gameplay GIF" class="gif">
+    <img src="ram-roast-roar-gif.gif" alt="Gameplay GIF" class="gif">
     <p>Rain down righteous justice from above! Ram enemy aircraft into scrap metal, roast bad guys mid-flight with blazing jet flames, or belt out a sky-shaking roar that ejects foes straight from their cockpits. The skies won’t know what hit ’em.</p>
   </div>
 
