--- a/bearplane.html
+++ b/bearplane.html
@@ -245,7 +245,7 @@
 </head>
 <body>
 
-  <img src="800x480-main.gif" alt="Bearplane Logo" class="hero-gif">
+  <img src="main-12.gif" alt="Bearplane Logo" class="hero-gif">
 
   <div class="section">
     <div class="trailer-button">
