--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <img src="images/main-12.gif" alt="Bearplane Preview" class="bearplane-image">
     <div class="bearplane-text">
       <h2>The Wildest Flight of the Century is Taking Off Soon!</h2>
-      <p>After decades of innovation in nuclear-infused food and beverages, Atomic Mills is proud to bring its atomic genius to the world of video games. To celebrate our explosive legacy, we’ve created <em>Bearplane</em>—a high-flying tribute to everything we stand for: chaos, courage, and questionable safety standards.</p>
+      <p>After decades of innovation in nuclear-infused food and beverages, Atomic Mills is proud to bring its atomic genius to the world of video games. To celebrate our booming legacy, we’ve created <em>Bearplane</em>—a high-flying tribute to everything we stand for: chaos, courage, and questionable safety standards.</p>
     </div>
   </div>
 </a>
