--- a/bearplane.html
+++ b/bearplane.html
@@ -411,7 +411,7 @@
   </div>
 </div>
 
-  <div class="social-links">
+<!--   <div class="social-links">
     <a href="https://www.atomicmills.com">Home</a> |
     <a href="https://www.instagram.com/atomicmillsco/" target="_blank">Instagram</a> |
     <a href="https://www.linkedin.com/company/atomic-mills" target="_blank">LinkedIn</a> |
@@ -419,8 +419,21 @@
     <a href="mailto:AtomicMills@aol.com">Email</a> |
     <a href="blog.html">Blog</a> |
     <a href="legal.html">Legal</a>
-  </div>
+  </div> -->
   
+<div class="footer-links" style="text-align: center; margin-top: 2em;">
+  ⌂ <a href="/">Home</a> |
+  <a href="/bearplane.html">English</a> |
+  <a href="/fr/">Français</a> |
+  <a href="/es/">Español</a> |
+  <a href="/de/">Deutsch</a> |
+  <a href="/it/">Italiano</a> |
+  <a href="/pt/">Português</a> |
+  <a href="/pl/">Polski</a> |
+  <a href="/zh/">简体中文</a> |
+  <a href="/ja/">日本語</a>
+</div>
+
 <div class="lightbox-overlay" id="lightbox">
   <img src="" alt="Enlarged Image" id="lightbox-img">
 </div>
