--- a/bearplane.html
+++ b/bearplane.html
@@ -422,7 +422,7 @@
   </div> -->
   
 <div class="footer-links" style="text-align: center; margin-top: 2em;">
-  ⌂ <a href="/">Home</a> |
+  <a href="/">⌂ Home</a> |
   <a href="/bearplane.html">English</a> |
   <a href="/fr/">Français</a> |
   <a href="/es/">Español</a> |
